cargo-features = ["profile-rustflags"]

[package]
name = "hello_syscall"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "z"
rustflags = [
	"-C", "link-arg=-nostartfiles",
	"-C", "link-arg=-Wl,-N,--no-pie,-T,syscall.ld",
]

[dependencies]
syscalls = { version = "*", default-features = false }

